examples/test/testpolicy11232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11232
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key24: value27
      key21: value18
      key40: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value8
      podSelector:
        matchLabels:
          key27: value25
          key31: value22
          key33: value18
